hotfix(css): fix body overflow scrollbar while animated, v.1.0.1

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -466,6 +466,9 @@ body {
   padding: 0 10%;
 }
 
+section {
+  overflow: hidden;
+}
 section:not(.first-screen) {
   padding: 2.188rem 0;
 }
