--- a/src/sass/app/_app-content.sass
+++ b/src/sass/app/_app-content.sass
@@ -36,6 +36,7 @@ body
   padding: 0 10%
 
 section
+  overflow: hidden
   &:not(.first-screen)
     padding: 2.188rem 0
 
